fix(mobile): fix oversize on safari

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -204,3 +204,8 @@ hr {
 .task-list-item {
   @apply leading-6
 }
+
+#root {
+  /* i love safari so much */
+  max-height: -webkit-fill-available;
+}
